# Game-of-Life

./: .gitignore  CMakeLists.txt  README.md
src/: grid.cpp  grid.h  main.cpp
